@@ -8,7 +8,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class SecurityConfig {
@@ -16,38 +16,43 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                // 🔒 Desactiva CSRF y habilita CORS
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
+                        // ✅ permite acceso total a tus endpoints
                         .requestMatchers("/actuator/**", "/api/**", "/uploads/**", "/**").permitAll()
                         .anyRequest().permitAll()
                 )
+                // 🔧 permite iframes (H2-console u otros)
                 .headers(headers -> headers.frameOptions(frame -> frame.disable()));
 
         return http.build();
     }
 
-    // 🌍 Configuración CORS central (solo aquí)
+    // 🌍 Configuración CORS global
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedOrigins(List.of(
+        // ✅ Dominios permitidos (usa solo los que de verdad necesitas)
+        configuration.setAllowedOrigins(Arrays.asList(
                 "http://localhost:5173",
                 "http://localhost:3000",
                 "https://fitnorius-gym.vercel.app",
-                "https://fitnorius-gym-git-main-juan-ks-projects-b6132ea5.vercel.app",
-                "https://fitnorius-aghr9tnpz-juan-ks-projects-b6132ea5.vercel.app"
+                "https://fitnorius-gym-git-main-juan-ks-projects-b6132ea5.vercel.app"
         ));
 
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
 
+        // ⚙️ Aplica a todos los endpoints
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
 
-        System.out.println("✅ CORS activo desde SecurityConfig: " + configuration.getAllowedOrigins());
+        System.out.println("✅ CORS habilitado para: " + configuration.getAllowedOrigins());
         return source;
     }
 }
